--- a/.gitignore
+++ b/.gitignore
@@ -32,8 +32,5 @@ vignettes/*.pdf
 *.utf8.md
 *.knit.md
 .Rproj.user
-<<<<<<< HEAD
 
-*.Rporj*
-=======
->>>>>>> c786a8aa82fed78e98025e8ac51897f1b97f5996
+*.Rproj*
